--- a/css/style.css
+++ b/css/style.css
@@ -349,8 +349,24 @@ nav ul li a:hover{
 }
 
 .cta{
-    background-color: #3e8e41;
-    color: #FFF;
+    all: unset;
+  width: 100px;
+  height: 30px;
+  font-size: 16px;
+  background: transparent;
+  border: none;
+  position: relative;
+  color: #ffffff;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
 .cta:hover{
