--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ input[type="text"]:focus {
 
 /* Footer */
 footer {
-  background-color: #222;
+  background-color: #FFFFFF;
   color: #fff;
   padding: 50px 0;
 }
