--- a/css/style.css
+++ b/css/style.css
@@ -32,101 +32,51 @@ h1 {
   color: #000000;
 }
 
+
 form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
 
-label {
-  display: block;
-  margin-bottom: 10px;
-  font-weight: bold;
-  color: #666;
-}
+  /* Style the label */
+  label {
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #444;
+  }
 
-input[type="text"] {
-  width: 100%;
-  max-width: 400px;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 255, 0.5); /* change the rgba value to blue */
-  transition: box-shadow 0.2s ease-in-out;
-}
+  /* Style the input field */
+  input[type="text"] {
+    padding: 10px;
+    width: 100%;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    color: #444;
+  }
 
-input[type="text"]:focus {
-  outline: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
+  /* Style the submit button */
+  .submit {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+  }
 
-.submit {
-  all: unset;
-  width: 100px;
-  height: 30px;
-  font-size: 16px;
-  background: transparent;
-  border: none;
-  position: relative;
-  color: #ffffff;
-  cursor: pointer;
-  z-index: 1;
-  padding: 10px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  white-space: nowrap;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.submit::after,
-.submit::before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -99999;
-  transition: all .4s;
-}
-
-.submit::before {
-  transform: translate(0%, 0%);
-  width: 100%;
-  height: 100%;
-  background: #519a53;
-  border-radius: 10px;
-}
-
-.submit::after {
-  transform: translate(10px, 10px);
-  width: 35px;
-  height: 35px;
-  background: #ffffff15;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border-radius: 50px;
-}
-
-.button-86:hover::before {
-  transform: translate(5%, 20%);
-  width: 110%;
-  height: 110%;
-}
-
-.submit:hover::after {
-  border-radius: 10px;
-  transform: translate(0, 0);
-  width: 100%;
-  height: 100%;
-}
-
-.submit:active::after {
-  transition: 0s;
-  transform: translate(0, 5%);
-}
+  /* Hover state for the submit button */
+  .submit:hover {
+    background-color: #3e8e41;
+  }
 
 #result {
   margin-top: 20px;
