--- a/css/style.css
+++ b/css/style.css
@@ -184,16 +184,22 @@ img {
 }
 
 a {
-  box-shadow: inset 0 0 0 0 #54b3d6;
-  color: #54b3d6;
-  margin: 0 -.25rem;
-  padding: 0 .25rem;
-  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+  display: inline-block;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #333;
+  transition: all 0.3s ease;
 }
+
 a:hover {
-  box-shadow: inset 100px 0 0 0 #37e015;
-  color: white;
+  background-color: #333;
+  color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
 }
+
 
 .footer-basic ul {
   padding:0;
