--- a/css/style.css
+++ b/css/style.css
@@ -186,18 +186,13 @@ img {
 a {
   display: inline-block;
   padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
   text-decoration: none;
   color: #333;
-  transition: all 0.3s ease;
+  transition: color 0.3s ease;
 }
 
 a:hover {
-  background-color: #333;
-  color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  transform: scale(1.1);
+  color: #f44336;
 }
 
 
