--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ form {
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #f2f2f2;
+    background-color: ##FFFFFF;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
