--- a/css/style.css
+++ b/css/style.css
@@ -350,3 +350,52 @@ nav ul li a:hover{
   background-color: #298e46;
   box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
 }
+
+.loading-screen {
+  background-color: #000000;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+}
+
+.loading-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 150px;
+}
+
+.loading-bar {
+  width: 10px;
+  height: 50px;
+  margin: 5px;
+  background-color: #ffffff;
+  animation: loading 1s ease-in-out infinite;
+}
+
+.loading-text {
+  font-size: 30px;
+  color: #ffffff;
+  margin-top: 20px;
+  font-family: Arial, sans-serif;
+}
+
+@keyframes loading {
+  0% {
+    height: 0px;
+  }
+  50% {
+    height: 50px;
+  }
+  100% {
+    height: 0px;
+  }
+}
