--- a/css/style.css
+++ b/css/style.css
@@ -162,26 +162,65 @@ img {
   background-color: #3b4c6b;
 }
 
+/* Minecraft-inspired loading screen */
 #loader {
-  border: 14px solid #f3f3f3;
-  border-top: 14px solid #3498db;
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  animation: spin 2s linear infinite;
+  display: block;
   position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+}
+
+#loader .spinner {
+  position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -60px;
-  margin-left: -60px;
-  z-index: 9999;
-  display: none;
+  transform: translate(-50%, -50%);
+  width: 70px;
+  height: 70px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #fbb040;
+  border-radius: 50%;
+  animation: spin 1.2s linear infinite;
+}
+
+#loader h2 {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
+
+/* Hide loader when page is loaded */
+#container {
+  display: none;
+}
+
+body.loaded #container {
+  display: block;
+}
+
+body.loading #container {
+  opacity: 0.3;
+  pointer-events: none;
+}
+
 
 a {
   display: inline-block;
