--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ img {
 
 #loader {
   border: 14px solid #f3f3f3;
-  border-top: 14px solid #3498db;
+  border-top: 14px solid #2ea44f;
   border-radius: 50%;
   width: 100px;
   height: 100px;
@@ -349,53 +349,4 @@ nav ul li a:hover{
 .cta:active {
   background-color: #298e46;
   box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
-}
-
-.loading-screen {
-  background-color: #000000;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-}
-
-.loading-box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 150px;
-  height: 150px;
-}
-
-.loading-bar {
-  width: 10px;
-  height: 50px;
-  margin: 5px;
-  background-color: #ffffff;
-  animation: loading 1s ease-in-out infinite;
-}
-
-.loading-text {
-  font-size: 30px;
-  color: #ffffff;
-  margin-top: 20px;
-  font-family: Arial, sans-serif;
-}
-
-@keyframes loading {
-  0% {
-    height: 0px;
-  }
-  50% {
-    height: 50px;
-  }
-  100% {
-    height: 0px;
-  }
 }
