--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ form {
     margin-bottom: 8px;
     font-size: 18px;
     font-weight: bold;
-    color: #444;
+    color: #5a5a5a;
   }
 
   /* Style the input field */
