--- a/css/style.css
+++ b/css/style.css
@@ -197,60 +197,26 @@ a:hover {
 
 
 
-.footer-basic ul {
-  padding:0;
-  list-style:none;
-  text-align:center;
-  font-size:18px;
-  line-height:1.6;
-  margin-bottom:0;
+footer {
+  background-color: #f8f8f8;
+  color: #333;
+  text-align: center;
+  padding: 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
-.footer-basic li {
-  padding:0 10px;
+footer p {
+  margin: 0;
+  font-size: 14px;
 }
 
-.footer-basic ul a {
-  color:inherit;
-  text-decoration:none;
-  opacity:0.8;
+footer p:first-child {
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
-.footer-basic ul a:hover {
-  opacity:1;
-}
-
-.footer-basic .social {
-  text-align:center;
-  padding-bottom:25px;
-}
-
-.footer-basic .social > a {
-  font-size:24px;
-  width:40px;
-  height:40px;
-  line-height:40px;
-  display:inline-block;
-  text-align:center;
-  border-radius:50%;
-  border:1px solid #ffffff;
-  margin:0 8px;
-  color:inherit;
-  opacity:0.75;
-}
-
-.footer-basic .social > a:hover {
-  opacity:0.9;
-}
-
-.footer-basic .copyright {
-  font-family: Arial, sans-serif;
-  margin-top:15px;
-  text-align:center;
-  font-size:13px;
-  color:#d1d1d1;
-  margin-bottom:0;
-}
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
