--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   font-family: Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  background-color: #000000;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -21,7 +21,7 @@ body {
   max-width: 600px;
   margin: 0 auto;
   padding: 40px;
-  background-color: #000000;
+  background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   text-align: center;
@@ -29,15 +29,16 @@ body {
 
 h1 {
   margin-bottom: 20px;
-  color: #FFFFFF;
+  color: #000000;
 }
+
 
 form {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #000000;
+    background-color: ##FFFFFF;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
@@ -47,7 +48,7 @@ form {
     margin-bottom: 8px;
     font-size: 18px;
     font-weight: bold;
-    color: #FFFFFF;
+    color: #5a5a5a;
   }
 
   /* Style the input field */
