--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ h1 {
 
 
 form {
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
     display: flex;
     flex-direction: column;
     align-items: center;
