--- a/css/style.css
+++ b/css/style.css
@@ -28,14 +28,12 @@ body {
 }
 
 h1 {
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
   margin-bottom: 20px;
   color: #000000;
 }
 
 
 form {
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -322,4 +320,8 @@ nav ul li a:hover{
 .cta:active {
   background-color: #298e46;
   box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
+
+.shadow-text {
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
 }
