--- a/css/style.css
+++ b/css/style.css
@@ -61,22 +61,66 @@ form {
     color: #444;
   }
 
-  /* Style the submit button */
-  .submit {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: #fff;
+.submit {
+    margin-top: 12px;
+    width: 100px;
+    height: 40px;
     border: none;
-    border-radius: 5px;
-    font-size: 16px;
+    outline: none;
+    color: #fff;
+    background: #000000;
     cursor: pointer;
-  }
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
 
-  /* Hover state for the submit button */
-  .submit:hover {
-    background-color: #3e8e41;
-  }
+.submit:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.submit:active {
+    color: #000000
+}
+
+.submit:active:after {
+    background: transparent;
+}
+
+.submit:hover:before {
+    opacity: 1;
+}
+
+.submit:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
 
 #result {
   margin-top: 20px;
