--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ a {
 }
 
 a:hover {
-  color: #808080;
+  color: #ff6600;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
@@ -334,3 +334,44 @@ nav ul li a{
     text-align: center;
     color: #5a5a5a;
   }
+
+/* CSS */
+.ctn {
+  margin-top: 5px;
+  appearance: none;
+  background-color: #000000;
+  border: 1px solid rgba(27, 31, 35, .15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.ctn:disabled {
+  pointer-events: none;
+}
+
+.ctn:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.ctn:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
